--updated CamelCase lowerCase development [jonathan -- 4 FEB 2013; 0411 EST]
--merged pose branch with UIbuttons [jonathan -- 4 FEB 2013; 0412 EST]