@@ -1,2 +1,3 @@
 --updated CamelCase lowerCase development [jonathan -- 4 FEB 2013; 0411 EST]
 --merged pose branch with UIbuttons [jonathan -- 4 FEB 2013; 0412 EST]
+--merged UI, Simobject, and GraphicsGlue [jonathan -- 5 FEB 2013; 1913] 
